--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="card text-center">
       <img src="images/max-profile.jpg" alt="Maxime Friess" class="img-circle" id="img-profile">
       <h1>Maxime Friess</h1>
-      <h2>Co-founder @ Emerald</h2>
-      <p>🛋️ Building a hotel chain made of premium homes<br>
+      <h2>Building a family and a business</h2>
+      <p>🛋️ Cofounded Emerald, a hotel chain made of premium homes<br>
         👉 Helping homeowners monetize their assets <br>🌍 Former investment banker</p>
     </div>
     <div class="card text-center">
