--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Maxime Friess</h1>
       <h2>Building a family and a business</h2>
       <p>🛋️ Cofounded Emerald, a hotel chain made of premium homes<br>
-        👉 Helping homeowners monetize their assets <br>🌍 Former investment banker</p>
+        👉 Helping homeowners monetize their assets <br>🌍 Former investment banker<br>👨‍👩‍👦</p>
     </div>
     <div class="card text-center">
       <ul>
